<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient_home"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="10dp">
        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="22dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
<<<<<<< HEAD
            android:background="@drawable/search_edit_white"
            android:gravity="center">

=======
            android:layout_marginBottom="22dp">
>>>>>>> bed4544d4dc5e21dfda4a04908091f976c6875a0
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_search_grey"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="输入科目.机构名.课程名" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_early"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/ic_home_zj" />

                <TextView
                    style="@style/text_white_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
<<<<<<< HEAD
                    android:text="@string/str_early_education" />
=======
                    android:text="@string/str_early_education"
                    style="@style/text_white_14"/>
>>>>>>> bed4544d4dc5e21dfda4a04908091f976c6875a0
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_foreign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/ic_home_foreign" />

                <TextView
                    style="@style/text_white_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
<<<<<<< HEAD
                    android:text="@string/str_foreign" />
=======
                    android:text="@string/str_foreign"
                    style="@style/text_white_14"/>
>>>>>>> bed4544d4dc5e21dfda4a04908091f976c6875a0
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_olypic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/ic_home_olypic" />

                <TextView
                    style="@style/text_white_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
<<<<<<< HEAD
                    android:text="@string/str_olypic" />
=======
                    android:text="@string/str_olypic"
                    style="@style/text_white_14"/>
>>>>>>> bed4544d4dc5e21dfda4a04908091f976c6875a0
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_specialty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/ic_home_specialty" />

                <TextView
                    style="@style/text_white_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
<<<<<<< HEAD
                    android:text="@string/str_specialty" />
=======
                    android:text="@string/str_specialty"
                    style="@style/text_white_14"/>
>>>>>>> bed4544d4dc5e21dfda4a04908091f976c6875a0
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_learn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/ic_home_learn" />

                <TextView
                    style="@style/text_white_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
<<<<<<< HEAD
                    android:text="@string/str_learn" />
=======
                    android:text="@string/str_learn"
                    style="@style/text_white_14"/>
>>>>>>> bed4544d4dc5e21dfda4a04908091f976c6875a0
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/shape_round_red"/>

    <!--<include layout="@layout/layout_home_sort"/>-->
    <View style="@style/div_vertical_line"/>
</LinearLayout>